--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
     <p>Vergessene NS Architektur</p>
   <p>Ausstellung in der Stube, Barfüßerstraße 8, ab 23.Januar 2026</p>
     <p></p>
-  <p>Betrachten Sie das Mannschaftshaus der Somme-Kaserne als 3D Modell in Augmented Reality:</p>
+  <p>Betrachte einen der zwei gesprengten Methanolbunker als 3D Modell in Augmented Reality:</p>
   </div>
 
   <model-viewer
-    src="Manhaus.glb"
-    alt="3D-Modell von Mannschaftshaus"
+    src="Paraxol_Methanolbunker.glb"
+    alt="3D-Modell vom Methanolbunker"
     auto-rotate
     camera-controls
     ar
